<resources>
    <string name="app_name">VibePlayer</string>
    <string name="ready_message">VibePlayer is ready\nOpen a video link from another app</string>
    <string name="invalid_link">VibePlayer could not open this link</string>
    <string name="night_mode_on">Night mode: On</string>
    <string name="night_mode_off">Night mode: Off</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="quality">Quality</string>
    <string name="audio">Audio</string>
    <string name="voiceover">Voiceover</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="subtitles">Subtitles</string>
    <string name="off">Off</string>
    <string name="seek_back">Seek back 10 seconds</string>
    <string name="seek_forward">Seek forward 10 seconds</string>
</resources>
